BPER/DEVF/force-app/main/default/objects/CH_BookMember__c/CH_BookMember__c.object-meta.xml
<CustomObject>
    <label>CH - Storico Portafogli</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH - Storico Portafogli</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Storico Portafogli</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>