BPER/DEVF/force-app/main/default/objects/CH_BookMember__c/fields/CRM_GestoreOrigine__c.field-meta.xml
<CustomField>
    <fullName>CRM_GestoreOrigine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gestore origine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>