BPER/DEVF/force-app/main/default/objects/CH_BookMember__c/fields/CRM_MDSDestinazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_MDSDestinazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Macro-modello di servizio destinazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>