BPER/DEVF/force-app/main/default/objects/CH_BookMember__c/fields/CRM_MDSPartenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_MDSPartenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Macro-modello di servizio origine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>