BPER/DEVF/force-app/main/default/objects/CH_BookMember__c/fields/CRM_PreviousMicroWallet__c.field-meta.xml
<CustomField>
    <fullName>CRM_PreviousMicroWallet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portafoglio origine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>